--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
     "name" : "node-red-contrib-nach-uppercase",
+    "version": "1.0.0",
+    "description": "A Node-RED node to convert messages to uppercase",
+    "keywords": [
+        "node-red",
+        "nodes"
+    ],
+    "author": "Nach",
+    "homepage": "https://github.com/Nachyn/node-red-contrib-nach-uppercase",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Nachyn/node-red-contrib-nach-uppercase"
+    },
+    "license": "MIT",
     "node-red" : {
         "nodes": {
             "upper-case": "upper-case.js"
         }
+    },
+    "engines": {
+        "node": ">=16"
     }
 }
